Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release

    New features

      - Separated the trusted and untrusted behaviors of page
        templates in the application server.  File-system-based
        templates are trusted, and database-based templates are
        untrusted.

      - Implemented rdb:gadflyRoot directive.    

      - Schemas are now copied before they are appended to content type or
        instance. This should probably become a policy later.

      - Implemented ICacheable view's current_cache_url() method, so that a
        link to the cache utility can be provided.

      - Added ++debug++ traversal adapter that allows you to turn on debugging
        flags in request.debug.  Currently the following flags are defined:

        + "source" adds HTML comments to rendered page templates showing
           where each code snippet came from.

        + "tal" leaves TAL/METAL markup in rendered page templates allowing
          you to see how it was generated.

        + "errors" shows full tracebacks when a system error occurs.

        Try e.g. http://localhost:8080/++debug++source,tal/@@contents.html
        and view the source of the resulting page.

      - Added 'url' adapter for IPathAdapter. It provides quoting mechanisms
        to strings (and string-like objects) from within ZPT, e.g:

        tal:attributes="href string:login.html?nextURL=${request/URL/url:quote}
        
        Other functions available are quote_plus, unquote, unquote_plus.
        
    Restructuring

      - Implemented both, getCell and queryCell, for ISecurityMap. Also
        updated the interface.

      - Removed CacheName field and replaced it by a 'Cache Names' vocabulary
        and a Choice field.

      - Templated Pages are now called ZPT Pages.
