@@ -386,8 +386,6 @@
   <i18n:registerTranslations directory="locales" />
 
   <!-- Register application with API Doc Tool -->
-  <!--
   <apidoc:rootModule module="bugtracker" />
-  -->
 
 </configure>
